--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "esbuild": "^0.18.4",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,7 +43,7 @@
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^21.1.0",
     "typescript": "^4.9.3",
-    "vite": "4.3.9",
+    "vite": "^4.3.9",
     "vitest": "^0.29.2"
   },
   "description": "An Ionic project"
