--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/haptics": "5.0.4",
     "@capacitor/keyboard": "5.0.4",
     "@capacitor/status-bar": "5.0.4",
+    "@ionic/cli": "^7.1.1",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
